--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,10 @@
     <string name="action_settings">Settings</string>
     <string name="prompt_email">EMail</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="title_activity_login">Sign-In</string>
     <string name="title_activity_message_overview">MessageOverview</string>
+    <string name="title_activity_message_detail">MessageDetailActivity</string>
 
 </resources>
