--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,10 @@
     <string name="title_activity_login">Sign-In</string>
     <string name="title_activity_message_overview">MessageOverview</string>
     <string name="title_activity_message_detail">MessageDetailActivity</string>
+    <string name="menu_add">Add</string>
+    <string name="menu_rate">Rate</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_delete">Delete</string>
+    <string name="action_refresh">Refresh</string>
 
 </resources>
